roles/k8s/files/pihole/pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 53
          name: dns-tcp
          protocol: UDP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/pihole
          name: pihole-pv
          subPath: pihole
        - mountPath: /etc/dnsmasq.d
          name: pihole-pv
          subPath: dnsmasq
        resources:
          limits:
            memory: 128Mi
      volumes:
      - name: pihole-pv
        persistentVolumeClaim:
          claimName: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - name: dns
    port: 53
    targetPort: dns-tcp
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - name: dns
    port: 53
    targetPort: dns-udp
    protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
spec:
  rules:
  - host: pihole.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              name: http
